changed api endpoint to environment var, fixed contact info overlap

--- a/client/src/Pages/Contacts.css
+++ b/client/src/Pages/Contacts.css
@@ -233,6 +233,13 @@
 
 }
 
+@media (max-width:440px){
+    
+    .contact li > a{
+        font-size: .8em;
+    }
+}   
+
 @media (max-width:300px){
     .Contacts{
         font-size: .5em;
